# conway

./: .gitignore  CLAUDE.md  Cargo.toml  mix.exs
docs/superpowers/plans/: 2026-05-31-phase-1-pure-core.md  README.md
docs/superpowers/specs/: 2026-05-31-conway-tui-design.md
lib/conway/: catalog.ex  cursor.ex  demo.ex  grid.ex  lexicon.ex  life.ex  pattern.ex  viewport.ex
lib/conway/render/: bars.ex  full_block.ex  render.ex
src/: main.rs  sim.rs
src/plugin/: io.rs  mod.rs
src/plugin/ui/: mod.rs  primary.rs
src/ui/: mod.rs  primary.rs
test/conway/: catalog_test.exs  cursor_test.exs  grid_test.exs  lexicon_test.exs  life_test.exs  pattern_test.exs  viewport_test.exs
test/conway/render/: bars_test.exs  full_block_test.exs  render_test.exs
