[package]
name = "conway"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["std", "debug", "multi_threaded", "bevy_state"] }
ratatui = "0.30.0-beta.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
